# esp32c3_pomodoro

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh  package.json  partitions.csv  sdkconfig  sdkconfig.defaults
.claude/: settings.local.json
components/esp_lcd_st7789/: idf_component.yml
components/esp_lcd_st7789/.github/workflows/: esp_upload_component.yml
components/esp_lcd_st7789/examples/lvgl/: sdkconfig
components/esp_lcd_st7789/examples/lvgl/main/: idf_component.yml
docs/: architecture.md  ble_buddy_design.md  functional_spec.md  hw_arch.md  network_design.md  pomodoro_design.md  requirements.md  sw_arch.md
docs/superpowers/plans/: 2026-05-02-refactor-buddy.md  2026-05-03-buzzer-sound-scheme.md  2026-05-03-wifi-multi-profile.md  2026-05-04-ws2812-led-effects.md  2026-05-06-settings-restructure.md  2026-05-14-buddy-tcp-redesign.md  2026-05-17-sensor-page.md
docs/superpowers/specs/: 2026-05-02-refactor-buddy-design.md  2026-05-03-buzzer-sound-scheme-design.md  2026-05-03-wifi-multi-profile-design.md  2026-05-04-ws2812-led-effects-design.md  2026-05-05-settings-restructure-design.md  2026-05-14-buddy-tcp-redesign.md  2026-05-17-sensor-page-design.md
fonts/: gen_emoji_symbols.py  gen_fonts.sh  gen_fonts_node.js  gen_gb2312_ranges.py
main/: CMakeLists.txt  Kconfig.projbuild  encoder.c  encoder.h  idf_component.yml  main.c  pomodoro_engine.c  pomodoro_engine.h  storage_service.c  storage_service.h  time_service.c  time_service.h  ui_manager.c  ui_manager.h  ui_screen_main.c  ui_screen_pomodoro.c  ui_screen_settings.c  ui_screen_settings.h  ui_screen_wifi.c  ui_screen_wifi.h  wifi_manager.c  wifi_manager.h
main/buddy/: buddy.c  buddy.h  buddy_chars.c  buddy_chars.h  buddy_render.c  buddy_render.h
main/buddy/buddies/: axolotl.c  blob.c  cactus.c  capybara.c  cat.c  chonk.c  dragon.c  duck.c  ghost.c  goose.c  mushroom.c  octopus.c  owl.c  penguin.c  rabbit.c  robot.c  snail.c  turtle.c
main/driver/: aht20.c  aht20.h  backlight.c  backlight.h  bmp280.c  bmp280.h  buzzer.c  buzzer.h  encoder.c  encoder.h  st7789_lcd.c  st7789_lcd.h  ws2812.c  ws2812.h
main/input/: input_handler.c  input_handler.h
main/network/: wifi_manager.c  wifi_manager.h
main/pomodoro/: pomodoro_engine.c  pomodoro_engine.h
main/service/: ble_service.c  ble_service.h  led_service.c  led_service.h  sensor_service.c  sensor_service.h  sound_service.c  sound_service.h  storage_service.c  storage_service.h  tcp_service.c  tcp_service.h  time_service.c  time_service.h  wifi_service.c  wifi_service.h
main/time/: time_service.c
main/ui/: custom_font.h  font_notosanssc.h  i18n.c  i18n.h  ui_list.c  ui_list.h  ui_manager.c  ui_manager.h  ui_screen_bridge_scan.c  ui_screen_bridge_scan.h  ui_screen_buddy.c  ui_screen_buddy.h  ui_screen_chat.c  ui_screen_chat.h  ui_screen_main.c  ui_screen_main.h  ui_screen_pomodoro.c  ui_screen_pomodoro.h  ui_screen_pressure_info.c  ui_screen_pressure_info.h  ui_screen_sensor.c  ui_screen_sensor.h  ui_screen_settings.c  ui_screen_settings.h  ui_screen_settings_bridge.c  ui_screen_settings_bridge.h  ui_screen_settings_buddy.c  ui_screen_settings_buddy.h  ui_screen_settings_debug.c  ui_screen_settings_debug.h  ui_screen_settings_light.c  ui_screen_settings_light.h  ui_screen_settings_pomodoro.c  ui_screen_settings_pomodoro.h  ui_screen_settings_sensor.c  ui_screen_settings_sensor.h  ui_screen_settings_system.c  ui_screen_settings_system.h  ui_screen_settings_time.c  ui_screen_settings_time.h  (+8 more)
reference/: JLX130-026-PN.md
tools/: convert_buddies.py  font_preview.py
tools/lvfont_tool/: __init__.py  __main__.py  app.py  cli.py  constants.py  gen_core.py  generate.py  i18n.py  themes.py
